DEVEX-678 Include failed module names in bulk output